--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="col-xs-12">
           <hr>
           <p class="lead text-center">
-            The Pioneers are heading to China! After inspiring tours to the Silicon Valley, Boston and New York, London, Tel Aviv, Berlin and Munich the PionierGarage is visiting <strong>Shangai</strong>. In 2016 we are curious and excited to visit a start-up region in China. We are full of energy to find out about the entrepreneurial scene in Shanghai and to get in touch with a variety of interesting and inspiring people. During the 10-day tour, we are visiting a number of startups, venture capitalists, entrepreneurial organisations and educational institutions.<br><br>
+            The Pioneers are heading to China! After inspiring tours to the Silicon Valley, Boston and New York, London, Tel Aviv, Berlin and Munich the PionierGarage is visiting <strong>Shanghai</strong>. In 2016 we are curious and excited to visit a start-up region in China. We are full of energy to find out about the entrepreneurial scene in Shanghai and to get in touch with a variety of interesting and inspiring people. During the 10-day tour, we are visiting a number of startups, venture capitalists, entrepreneurial organisations and educational institutions.<br><br>
             Be sure to check out the amazing tour video we made on our Silicon Valley Tour 2013:</h3>
           </p>
           <hr>
