updated team list

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="panel panel-default">
-                    <div class="panel-body">
-                       <h3>Peter Grittner</h3>
+            <div class="panel-body">
+                <h3>Peter Grittner</h3>
             <h4>Computer Science, KIT</h4>
             <p>
                I am very interested in Machine Learning and how those techniques can be applied to solve real world problems.
@@ -178,10 +178,11 @@
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <h3>Simon Böhm</h3>
-                    <h4>Computer Science, KIT</h4>
+                    <h3>Colin Weitmann</h3>
+                    <h4>KIT</h4>
                     <p>
-                        Internet of things is what fascinates my currently most. Looking forward to find out how far IoT is adapted in China.
+                        I am curious how it is to be a founder in Shanghai. Are the possibilities and difficulties different from the ones in Germany?
+                        <!-- Internet of things is what fascinates my currently most. Looking forward to find out how far IoT is adapted in China. -->
                     </p>
                 </div>
             </div>
@@ -226,18 +227,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <h3>Pawel Bielski</h3>
-                <h4>Electric Engineering, KIT</h4>
-                <p>
-                    I am curious how it is to be a founder in Shanghai. Are the possibilities and difficulties different from the ones in Germany?
-                </p>
-              </div>
-            </div>
-          </div>
-
+          
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
               <div class="panel panel-default">
                   <div class="panel-body">
@@ -280,7 +270,7 @@
           <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="panel panel-default">
               <div class="panel-body">
-                <h3>Samuel</h3>
+                <h3>Samuel Denis</h3>
                 <h4></h4>
                 <p>
                     I know that i want to found a start-up myself so i want to get as much insight, inspiration and motivation as possible.
