Nutzung der info@ mail und Markup Fixes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="lead text-center">
               15 students from the PionierGarage, the <strong>university group for entrepreneurship at the Karlsruhe Institute of Technology (KIT)</strong> in Germany, are going to visit one of the world's most significant tech and startup regions: Shanghai
               <br><br>
-              To find out more about our entrepreneurship club at Germany's leading technical university, <a href="http://pioniergarage.de" target="blank">head over to our homepage</a> or contact us on <a href="mailto:vorstand@pioniergarage.de">vorstand at pioniergarage.de</a> to become part of the tour as a supporter, partner, sponsor or Startup/VC to be visited. We're looking forward to meeting inspiring people!
+              To find out more about our entrepreneurship club at Germany's leading technical university, <a href="http://pioniergarage.de" target="blank">head over to our homepage</a> or contact us on <a href="mailto:info@pioniergarage.de">info at pioniergarage.de</a> to become part of the tour as a supporter, partner, sponsor or Startup/VC to be visited. We're looking forward to meeting inspiring people!
             </p>
             <hr>
           </div>
@@ -103,8 +103,7 @@
         <div class="col-xs-12">
           <hr>
           <p class="lead text-center">
-            The Pioneers are heading to China! After inspiring tours to the Silicon Valley, Boston and New York, London, Tel Aviv, Berlin and Munich the PionierGarage is visiting <strong>Shanghai</strong>. In 2016 we are curious and excited to visit a start-up region in China. We are full of energy to find out about the entrepreneurial scene in Shanghai and to get in touch with a variety of interesting and inspiring people. During the 10-day tour, we are visiting a number of startups, venture capitalists, entrepreneurial organisations and educational institutions.<br><br>
-            Be sure to check out the amazing tour video we made on our Silicon Valley Tour 2013:</h3>
+            The Pioneers are heading to China! After inspiring tours to the Silicon Valley, Boston and New York, London, Tel Aviv, Berlin and Munich the PionierGarage is visiting <strong>Shanghai</strong>. In 2016 we are curious and excited to visit a start-up region in China. We are full of energy to find out about the entrepreneurial scene in Shanghai and to get in touch with a variety of interesting and inspiring people. During the 10-day tour, we are visiting a number of startups, venture capitalists, entrepreneurial organisations and educational institutions. 
           </p>
           <hr>
         </div><!--/col-->
@@ -113,6 +112,7 @@
       
   <div class="container">
       <div class="row text-center">
+          <p class="lead">Make sure to check out the amazing tour video we made on our Silicon Valley Tour 2013:</p>
           <iframe   src="https://www.youtube.com/embed/t-WDfZML1FY" frameborder="0" allowfullscreen></iframe>
       </div>
   </div>
