team description changed

--- a/index.html
+++ b/index.html
@@ -261,8 +261,9 @@
                 <h4>Mecanical Engineering, KIT</h4>
                 <!-- <p>
                      <!-- What is the motivation for the founder to found their start-up? Does their motivation change as the start-up grows? -->
+                <p>
                 Already taking every chance such as visiting Chinas Hightech Startups to be able to found ones own venture one time.
-            </p> -->
+                </p> 
               </div>
             </div>
           </div>
@@ -271,7 +272,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <h3>Samuel Denis</h3>
-                <h4></h4>
+                <h4>Mecanical Engineering, KIT</h4>
                 <p>
                     I know that i want to found a start-up myself so i want to get as much insight, inspiration and motivation as possible.
                 </p>
