shanghai tour video added, active state navbar scroll problem fixed (workaround removed), team description updated, small README additions

--- a/index.html
+++ b/index.html
@@ -110,7 +110,16 @@
         </div>
       </div>
       
-  <div class="container">
+      <div class="container">
+          <div class="row text-center">
+              <p class="lead">Our 2016 Shanghai Tour motivational Video</p>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/1dC3V9fLgK0" frameborder="0" allowfullscreen></iframe>
+          </div>
+      </div>
+
+
+
+      <div class="container">
       <div class="row text-center">
           <p class="lead">Make sure to check out the amazing tour video we made on our Silicon Valley Tour 2013:</p>
           <iframe   src="https://www.youtube.com/embed/t-WDfZML1FY" frameborder="0" allowfullscreen></iframe>
@@ -179,7 +188,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <h3>Colin Weitmann</h3>
-                    <h4>KIT</h4>
+                    <h4>Computer Science, Media and Communications, Hochschule Karlsruhe (HSKA) </h4>
                     <p>
                         I am curious how it is to be a founder in Shanghai. Are the possibilities and difficulties different from the ones in Germany?
                         <!-- Internet of things is what fascinates my currently most. Looking forward to find out how far IoT is adapted in China. -->
