New guy joining the team

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="panel panel-default">
             <div class="panel-body">
-              <h3>Florian Abel</h3>
+              <h3>Fabian Kain</h3>
               <h4>Mecanical Engineering Master, KIT</h4>
               <p>
                   I am looking forward to meet interesting people, listen to their stories and get inspired. As a Engineering student I am especially interested in product start-ups.
@@ -302,7 +302,7 @@
                 <h4>Mecanical Engineering, KIT</h4>
                 <!-- <p>
                      <!-- What is the motivation for the founder to found their start-up? Does their motivation change as the start-up grows? -->
-                <p>
+                <p> -->
                 Already taking every chance such as visiting Chinas Hightech Startups to be able to found ones own venture one time.
                 </p> 
               </div>
