Team text update

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
               <div class="panel panel-default">
                   <div class="panel-body">
                       <h3>Junjún Wan</h3>
-                      <h4>Information Technology Master, KIT</h4>
+                      <h4>Information Engineering and Management Master, KIT</h4>
                       <p>
-                          I am from China and currently studying in Karlsruhe. I am looking forward to get many insights and explore with my german friends the chinese entrepreneurial ecosystem.
+                          I am from China and currently studying in Karlsruhe. I am looking forward to get many insights and explore with my german friends the chinese entrepreneurial ecosystem. I am very interested in machine learning and computer vision.
                       </p>
                   </div>
               </div>
