--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <h3>Fabian Kain</h3>
-              <h4>Mecanical Engineering Master, KIT</h4>
+              <h4>Mechanical Engineering Master, KIT</h4>
               <p>
                   I am looking forward to meet interesting people, listen to their stories and get inspired. As a Engineering student I am especially interested in product start-ups.
               </p>
@@ -299,7 +299,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <h3>Louis Schäfer</h3>
-                <h4>Mecanical Engineering, KIT</h4>
+                <h4>Mechanical Engineering, KIT</h4>
                 <!-- <p>
                      <!-- What is the motivation for the founder to found their start-up? Does their motivation change as the start-up grows? -->
                 <p> -->
@@ -313,7 +313,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <h3>Samuel Denis</h3>
-                <h4>Mecanical Engineering, KIT</h4>
+                <h4>Mechanical Engineering, KIT</h4>
                 <p>
                     I know that i want to found a start-up myself so i want to get as much insight, inspiration and motivation as possible.
                 </p>
